2001-02-08  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (merge_word_width): fixed

2001-02-07  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (draw): use HTML_IS_PRINTER to detect printer object
	cleanly. (from Dave Benson <daveb@ffem.org>)

	* htmltokenizer.c (html_tokenizer_end): clear dest.
	(html_tokenizer_reset): free the token buffer list, and clear dest
	and size. (from Dave Benson <daveb@ffem.org>)

2001-02-01  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (mouse_change_pos): allow a little bit of motion
	before we decide it isn't a click on a url.  This should probably be
	reworked to function more like netscape over urls.

2001-02-01  Radek Doulik  <rodo@ximian.com>

	* htmlcursor.c (html_cursor_end_of_line): take care of objects
	with different height on one line
	(html_cursor_beginning_of_line): ditto
	(html_cursor_up): ditto
	(html_cursor_down): ditto

2001-02-01  Larry Ewing  <lewing@ximian.com>

	* htmlembedded.c (calc_size): fix the bug I introduced last week
	that caused htmliframes too loop in their size negotiation.

2001-01-31  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (html_engine_insert_text): delay
	spell check only for newly typed words

2001-01-30  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_set_painter): take care of borber

	* htmliframe.c (draw): take care of html border, fixes iframes
	printing

	* htmlcluev.c (check_point): take care of Objects with zero width

	* htmlclueflow.c (check_point): take care of Objects with zero
	width

	* htmltextslave.c (check_point): take care of ''

	* htmlimage.c (get_actual_width): use actual engine
	(get_actual_height): likewise

	* htmliframe.c (set_max_width): implemented set max width
	(calc_min_width): rewritten, use html_engine_calc_min_width, this
	fixes Evolution welcome message problem

	* htmlengine.c (html_engine_get_view_width): take care of iframes
	(html_engine_get_view_height): likewise
	(html_engine_calc_min_width): new method
